# ChessboardSlintRust

./: Cargo.toml  README.md  build.rs
examples/: demo.rs
src/: lib.rs
ui/: chessboard.slint  demo.slint
