[package]
name = "chessboard-slint"
version = "0.1.0"
edition = "2021"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
description = "A chessboard component for Slint Ui Toolkit"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.2"

[build-dependencies]
slint-build = "1.0.2"

[[example]]
name = "demo"
path = "examples/demo.rs"